--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 .bundle/
 Gemfile.lock
+public/javascripts/
+
 log/*.log
 pkg/
+
+spec/dummy/.env.development
+spec/dummy/.env.test
 spec/dummy/log/*.log
 spec/dummy/node_modules/
 spec/dummy/yarn-error.log
