React components updates and fix ESLint warnings

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -63,6 +63,7 @@ engines:
       - vendor/
   eslint:
     enabled: true
+    channel: eslint-5
 ratings:
   # to receive a letter grade for a particular file or overall GPA for your project
   paths:
