--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
-    "@rails/webpacker": "^4.0.7",
+    "@rails/webpacker": "~4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
@@ -17,7 +17,7 @@
     "eslint": "^6.5.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.16.0",
-    "webpack": "^4.40.2",
+    "webpack": "~4",
     "webpack-dev-server": "^3.8.1"
   },
   "scripts": {
