--- a/spec/dummy/config/lcms-admin.yml
+++ b/spec/dummy/config/lcms-admin.yml
@@ -3,16 +3,12 @@
 layout: 'lcms/engine/admin'
 
 # TODO: Check the default values handling
-# Engine
-engine: 'Lcms::Engine::Engine'
-
-# TODO: Check the default values handling
 # Redirects
 redirect:
   host:
-#    root_path: 'admin_path'
-#    document_path: 'document_path'
-#    material_path: 'material_path'
+    root_path: 'admin_path'
+    document_path: 'document_path'
+    material_path: 'material_path'
   engine:
     root_path: 'admin_path'
     document_path: 'document_path'
