--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -36,7 +36,7 @@ Metrics/BlockLength:
     - 'config/routes.rb'
     - 'lcms-engine.gemspec'
     - 'lib/tasks/elasticsearch.rake'
-  ExcludedMethods: ['guard', 'included', 'class_eval']
+  IgnoredMethods: ['guard', 'included', 'class_eval']
 
 Metrics/ClassLength:
   Max: 250
