--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,9 @@ Layout/MultilineMethodCallIndentation:
 Lint/AmbiguousBlockAssociation:
   Enabled: false
 
+Lint/OrAssignmentToConstant:
+  Enabled: false
+
 Metrics/AbcSize:
   Max: 39
 
