Update usage of external decorators (and minor updates)
- Fix bug with `Lcms::Engine::PathHelper#dynamic_path`
- Force install native nokogiri gem with Docker
- Bump mimemagic gem
- Since Rails 6 introduced zeitwerk autoloader we need to review and change the way host application decorates engine's objects.

Consider the host application is named `MyApp`, then to decorate lcms-engine's objects the following should be done.

```ruby
# my_app/app/models/my_app/lcms/engine/user_decorator.rb
module MyApp
  module Lcms
    module Engine
      module UserDecorator
        def self.prepended(base)
          # Any scope or possible class methods
          base.before_validation :some_method
        end

        def some_other_method
          true
        end
      end
    end
  end
end

::Lcms::Engine::User.prepend(MyApp::Lcms::Engine::UserDecorator)
```

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
 
   app:
     build: .
-    command: bash -c "bundle install && yarn && tail -f /dev/null"
+    # Used to install native gem which solves build errors for nokogumbo and other gems
+    command: bash -c "gem install nokogiri && bundle install && yarn && tail -f /dev/null"
     env_file:
       - spec/dummy/.env.docker
     environment:
