Materials & Lessons caching
Also fixes some typos. Updates the docker-compose file for RoR 4.2 version.

--- a/docker-compose.ror4.yml
+++ b/docker-compose.ror4.yml
@@ -13,7 +13,7 @@ services:
       - 6379
 
   app-ror4:
-    build: .
+    image: lcms-engine:ror4
     # Used to install native gem which solves build errors for nokogumbo and other gems
     command: bash -c "gem install nokogiri && bundle install && yarn && tail -f /dev/null"
     env_file:
