--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ services:
   db:
     image: postgres:11.5-alpine
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
       - postgres:/var/lib/postgresql/data
 
   redis:
     image: redis:5.0.5-alpine
     ports:
-      - 6379
+      - "6379"
 
   app:
     image: lcms-engine
@@ -21,6 +21,7 @@ services:
       REDIS_URL: redis://redis:6379/1
     volumes:
       - .:/app
+      - ./node_modules:/app/node_modules
       - bundle:/usr/local/bundle
     depends_on:
       - db
