--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@rails/webpacker": "~5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "classnames": "^2.2.6",
+    "foundation-sites": "^6.7.4",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-tagsinput": "^3.19.0",
     "react_ujs": "^2.6.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
