--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "6379"
 
   app:
-    image: lcms-engine
+    image: learningtapestry/lcms-engine
     command: bash -c "bundle install && yarn && tail -f /dev/null"
     env_file:
       - spec/dummy/.env.docker
