Add custom commands to compose
- start container ONLY
- start container AND install gems ONLY
- start container, install gems AND launch yarn

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,14 @@ services:
       - "6379"
 
   app:
-    image: learningtapestry/lcms-engine
-    command: bash -c "bundle install && yarn && tail -f /dev/null"
+    image: learningtapestry/lcms-engine:ruby-3.2
+    # command to install all gems AND launch yarn
+#    command: bash -c "bundle install && yarn && tail -f /dev/null"
+    # command to install all gems ONLY
+#    command: bash -c "bundle install && tail -f /dev/null"
+    # command is used to start the container ONLY, can be used to inspect
+    # start up issues, solve gems conflicts etc
+    command: bash -c "tail -f /dev/null"
     env_file:
       - spec/dummy/.env.docker
     environment:
