--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@babel/preset-react": "^7.0.0",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.7",
-    "@selectize/selectize": "^0.15.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
@@ -18,7 +17,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-tagsinput": "^3.19.0",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "tom-select": "^2.2.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
