--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
