Multiple reimport support
- Lesson
- Materials
- Delete legacy UB specific logic
- Clean up leftovers
- Delete gems:
  - js-routes
  - pdfjs_viewer-rails

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,9 +10,7 @@
   "globals": {
     "$": false,
     "ga": false,
-    "Foundation": false,
-    "Modernizr": false,
-    "Routes": false
+    "Modernizr": false
   },
   "plugins": ["react", "jsx-a11y", "prettier"],
   "settings": {
