--- a/lib/generators/lcms/engine/install/templates/config/lcms.yml
+++ b/lib/generators/lcms/engine/install/templates/config/lcms.yml
@@ -49,3 +49,4 @@ sanitizer: '::Lcms::Engine::HtmlSanitizer'
 
 queries:
   document: '::Lcms::Engine::AdminDocumentsQuery'
+  material: '::Lcms::Engine::AdminMaterialsQuery'
