Add unreleased version of lt-lcms with RBS

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,7 @@ AllCops:
     - spec/dummy/bin/*
     - templates/*
     - config/initializers/simple_form_bootstrap.rb
+    - Steepfile
   NewCops: enable
   TargetRubyVersion: 3.2
 
