--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -1,8 +1,9 @@
 ---
 sources:
-- name: ruby/gem_rbs_collection
+- type: git
+  name: ruby/gem_rbs_collection
+  revision: 8a678b2ec20e9d594055f53745399814e3a887dc
   remote: https://github.com/ruby/gem_rbs_collection.git
-  revision: main
   repo_dir: gems
 path: ".gem_rbs_collection"
 gems:
@@ -118,6 +119,10 @@ gems:
     revision: 8a678b2ec20e9d594055f53745399814e3a887dc
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: cgi
+  version: '0'
+  source:
+    type: stdlib
 - name: concurrent-ruby
   version: '1.1'
   source:
@@ -126,6 +131,10 @@ gems:
     revision: 8a678b2ec20e9d594055f53745399814e3a887dc
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: csv
+  version: '0'
+  source:
+    type: stdlib
 - name: date
   version: '0'
   source:
@@ -146,6 +155,14 @@ gems:
     revision: 8a678b2ec20e9d594055f53745399814e3a887dc
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: fileutils
+  version: '0'
+  source:
+    type: stdlib
+- name: forwardable
+  version: '0'
+  source:
+    type: stdlib
 - name: globalid
   version: '1.1'
   source:
@@ -198,6 +215,18 @@ gems:
     revision: 8a678b2ec20e9d594055f53745399814e3a887dc
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: listen
+  version: '3.2'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: logger
+  version: '0'
+  source:
+    type: stdlib
 - name: mail
   version: '2.8'
   source:
@@ -218,6 +247,18 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: monitor
+  version: '0'
+  source:
+    type: stdlib
+- name: mutex_m
+  version: '0'
+  source:
+    type: stdlib
+- name: net-http
+  version: '0'
+  source:
+    type: stdlib
 - name: nokogiri
   version: '1.11'
   source:
@@ -226,6 +267,10 @@ gems:
     revision: 8a678b2ec20e9d594055f53745399814e3a887dc
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: openssl
+  version: '0'
+  source:
+    type: stdlib
 - name: parallel
   version: '1.20'
   source:
@@ -234,6 +279,10 @@ gems:
     revision: 8a678b2ec20e9d594055f53745399814e3a887dc
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: pathname
+  version: '0'
+  source:
+    type: stdlib
 - name: rack
   version: '2.2'
   source:
@@ -278,6 +327,10 @@ gems:
     revision: 8a678b2ec20e9d594055f53745399814e3a887dc
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: securerandom
+  version: '0'
+  source:
+    type: stdlib
 - name: simplecov
   version: '0.22'
   source:
@@ -286,35 +339,19 @@ gems:
     revision: 8a678b2ec20e9d594055f53745399814e3a887dc
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
-- name: timeout
-  version: '0'
-  source:
-    type: stdlib
-- name: cgi
-  version: '0'
-  source:
-    type: stdlib
-- name: logger
-  version: '0'
-  source:
-    type: stdlib
-- name: monitor
-  version: '0'
-  source:
-    type: stdlib
-- name: mutex_m
-  version: '0'
-  source:
-    type: stdlib
 - name: singleton
   version: '0'
   source:
     type: stdlib
-- name: time
+- name: socket
   version: '0'
   source:
     type: stdlib
-- name: tsort
+- name: steep
+  version: 1.5.3
+  source:
+    type: rubygems
+- name: strscan
   version: '0'
   source:
     type: stdlib
@@ -322,31 +359,19 @@ gems:
   version: '0'
   source:
     type: stdlib
-- name: securerandom
+- name: time
   version: '0'
   source:
     type: stdlib
-- name: pathname
+- name: timeout
   version: '0'
   source:
     type: stdlib
-- name: openssl
+- name: tsort
   version: '0'
   source:
     type: stdlib
 - name: uri
-  version: '0'
-  source:
-    type: stdlib
-- name: forwardable
-  version: '0'
-  source:
-    type: stdlib
-- name: net-http
-  version: '0'
-  source:
-    type: stdlib
-- name: socket
   version: '0'
   source:
     type: stdlib
