--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -36,6 +36,11 @@ PreCommit:
   TrailingWhitespace:
     enabled: true
 
+  TypeCheck:
+    enabled: true
+    description: RBS check
+    command: [ 'bundle', 'exec', 'steep', 'check' ]
+
 PostCheckout:
   ALL:
     quiet: true # Change all post-checkout hooks to only display output on failure
