Update lt-lcms, lt-google-api and gems

--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -2,7 +2,7 @@
 sources:
 - type: git
   name: ruby/gem_rbs_collection
-  revision: 5666e737d2b27a8425b4e3855c1a38cae54989f7
+  revision: b42e4de88058603a34446942143b3ac197b9685c
   remote: https://github.com/ruby/gem_rbs_collection.git
   repo_dir: gems
 path: ".gem_rbs_collection"
@@ -12,7 +12,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionpack
@@ -20,7 +20,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionview
@@ -28,7 +28,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activejob
@@ -36,7 +36,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activemodel
@@ -44,7 +44,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activerecord
@@ -52,7 +52,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activestorage
@@ -60,7 +60,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activesupport
@@ -68,7 +68,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: ast
@@ -76,7 +76,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: aws-sdk-core
@@ -84,7 +84,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: aws-sdk-kms
@@ -92,7 +92,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: aws-sdk-s3
@@ -100,7 +100,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: aws-sdk-sqs
@@ -108,15 +108,19 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: base64
+  version: '0'
+  source:
+    type: stdlib
 - name: bcrypt
   version: '3.1'
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: cgi
@@ -128,10 +132,14 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: date
+  version: '0'
+  source:
+    type: stdlib
+- name: erb
   version: '0'
   source:
     type: stdlib
@@ -140,7 +148,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: faraday
@@ -148,7 +156,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: forwardable
@@ -160,7 +168,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: hashie
@@ -168,7 +176,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: httparty
@@ -176,7 +184,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: httpclient
@@ -184,7 +192,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: i18n
@@ -192,7 +200,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: json
@@ -204,7 +212,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: logger
@@ -216,7 +224,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: mime-types
@@ -224,7 +232,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: minitest
@@ -248,7 +256,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: openssl
@@ -260,7 +268,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: pathname
@@ -272,7 +280,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rails-dom-testing
@@ -280,7 +288,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: railties
@@ -288,7 +296,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rainbow
@@ -296,7 +304,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rdoc
@@ -308,7 +316,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rubyzip
@@ -316,7 +324,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 5666e737d2b27a8425b4e3855c1a38cae54989f7
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: securerandom
@@ -328,7 +336,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 8a678b2ec20e9d594055f53745399814e3a887dc
+    revision: b42e4de88058603a34446942143b3ac197b9685c
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: singleton
