--- a/rbs_collection.yaml
+++ b/rbs_collection.yaml
@@ -11,6 +11,8 @@ path: .gem_rbs_collection
 gems:
   # Skip loading rbs gem's RBS.
   # It's unnecessary if you don't use rbs as a library.
+  - name: concurrent-ruby
+    ignore: true
   - name: rbs
     ignore: true
   - name: steep
