--- a/rbs_collection.lock.yaml
+++ b/rbs_collection.lock.yaml
@@ -2,7 +2,7 @@
 sources:
 - type: git
   name: ruby/gem_rbs_collection
-  revision: 267dd270bb5aabcc1e21c87f44360f0680a8501c
+  revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
   remote: https://github.com/ruby/gem_rbs_collection.git
   repo_dir: gems
 path: ".gem_rbs_collection"
@@ -12,7 +12,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionpack
@@ -20,7 +20,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: actionview
@@ -28,7 +28,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activejob
@@ -36,7 +36,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activemodel
@@ -44,7 +44,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activerecord
@@ -52,7 +52,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activestorage
@@ -60,7 +60,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: activesupport
@@ -68,7 +68,15 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: addressable
+  version: '2.8'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: ast
@@ -76,7 +84,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: aws-sdk-core
@@ -84,7 +92,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: aws-sdk-kms
@@ -92,7 +100,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: aws-sdk-s3
@@ -100,7 +108,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: aws-sdk-sqs
@@ -108,7 +116,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: base64
@@ -120,7 +128,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: carrierwave
@@ -128,7 +136,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 267dd270bb5aabcc1e21c87f44360f0680a8501c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: cgi
@@ -139,6 +147,14 @@ gems:
   version: '0'
   source:
     type: stdlib
+- name: dotenv-rails
+  version: '2.8'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
 - name: erb
   version: '0'
   source:
@@ -148,7 +164,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: faraday
@@ -156,9 +172,13 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
+- name: fileutils
+  version: '0'
+  source:
+    type: stdlib
 - name: forwardable
   version: '0'
   source:
@@ -168,7 +188,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: hashie
@@ -176,7 +196,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: httparty
@@ -184,7 +204,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: httpclient
@@ -192,7 +212,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: i18n
@@ -200,7 +220,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: json
@@ -212,7 +232,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: logger
@@ -224,7 +244,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: mime-types
@@ -232,7 +252,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: minitest
@@ -256,7 +276,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: openssl
@@ -268,7 +288,15 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: parser
+  version: '3.2'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: pathname
@@ -280,7 +308,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rails-dom-testing
@@ -288,7 +316,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: railties
@@ -296,7 +324,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rainbow
@@ -304,7 +332,15 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: rake
+  version: '13.0'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rdoc
@@ -316,7 +352,39 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: regexp_parser
+  version: '2.8'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: rest-client
+  version: '2.1'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: rubocop
+  version: '1.57'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
+    remote: https://github.com/ruby/gem_rbs_collection.git
+    repo_dir: gems
+- name: rubocop-ast
+  version: '1.30'
+  source:
+    type: git
+    name: ruby/gem_rbs_collection
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: rubyzip
@@ -324,7 +392,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: securerandom
@@ -336,7 +404,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: b42e4de88058603a34446942143b3ac197b9685c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: singleton
@@ -356,7 +424,7 @@ gems:
   source:
     type: git
     name: ruby/gem_rbs_collection
-    revision: 267dd270bb5aabcc1e21c87f44360f0680a8501c
+    revision: 20e6e0f0685139dbd29df50e03367e222aa5d1b8
     remote: https://github.com/ruby/gem_rbs_collection.git
     repo_dir: gems
 - name: time
