Exclude map files from CodeClimate analysis
The changes made in this commit involve updating .codeclimate.yml to exclude map files located in the public/lcms-engine-assets directory from the CodeClimate analysis. This update improves efficiency by preventing unnecessary analysis of these files.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -74,6 +74,7 @@ ratings:
 exclude_paths:
   - app/assets/javascripts/lcms/engine/vendor/**/*
   - features/**/*
+  - public/lcms-engine-assets/**/*.map
   - spec/**/*
   - vendor/**/*
   - node_modules/**/*
