Modify handling of flash messages in Lcms::Engine
Two constants, FLASH_MESSAGE_MAX_CHAR and FLASH_REDIS_PREFIX, are added in Engine module. The flash partial has been updated to handle flash messages differently, checking first if the message originates from Redis or not.

Also, this refactor includes the deletion of engine.rbs under models,
moving its contents to engine.rbs under lib.

--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -13,8 +13,8 @@ PreCommit:
   BundleCheck:
     enabled: true
 
-  BundleOutdated:
-    enabled: true
+#  BundleOutdated:
+#    enabled: true
 
   LocalPathsInGemfile:
     enabled: true
